# dem_cabana

./: .gitignore  CMakeLists.txt  README.md  load_data.py  plot_fluid_falling_on_boundary.py  plot_two_fluid_blocks_colliding.py  visualization_paraview.py
examples/: 01_dem_two_particles_colliding.cpp  02_dem_two_particles_colliding_tangential_contact.cpp  03_dem_two_particles_colliding.cpp  04_dem_many_particles_dam_break.cpp  05_dem_six_particles_colliding.cpp  CMakeLists.txt  verification_01_elastic_normal_impact_of_two_identical_particles.cpp  verification_02_elastic_normal_impact_of_a_particle_with_a_rigid_wall.cpp  verification_03_normal_particle_wall_contact_with_different_restitution_coefficients.cpp
